<resources>
    <string name="app_name">Firebase</string>

    <string name="more">More</string>
    <string name="romanian">Romana \u2022</string>
    <string name="spanish">Espanol (Espana) \u2022</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_fb_account">Create new facebook account</string>
    <string name="log_in">Log in</string>
    <string name="fb_banner_description">banner</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="phone">Phone</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up
    </string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered email to sent you password
        reset instructions.
    </string>
    <string name="crash_button_label">Cause Crash</string>
    <string name="catch_crash_checkbox_label">Catch Crash</string>

</resources>
